# mousehop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DOC.md  NOTICE  README.md  RELEASING.md  config.toml  flake.nix  release-plz.toml
.github/workflows/: aur-publish.yml  cachix.yml  ci.yml  release-flatpak.yml  release-plz.yml  release-update-metainfo.yml  release-update-site.yml  release.yml
build-aux/: com.mousehop.Mousehop.metainfo.xml  com.mousehop.Mousehop.yml  macos-lsui-element.plist
firewall/: mousehop.xml
input-capture/: Cargo.toml
input-capture/src/: clipboard.rs  frontmost_app.rs  layer_shell.rs  libei.rs  macos.rs  windows.rs
input-capture/src/windows/: event_thread.rs
input-emulation/: Cargo.toml
input-emulation/src/: lib.rs  libei.rs  macos.rs  windows.rs  wlroots.rs  x11.rs  xdg_desktop_portal.rs
input-event/: Cargo.toml
input-event/src/: lib.rs  libei.rs
lan-mouse-gtk/src/: lib.rs  macos_privacy.rs  window.rs
mousehop/: CHANGELOG.md  Cargo.toml
mousehop-app/: Cargo.toml  com.mousehop.Mousehop.desktop
mousehop-app/src/: capture.rs  client.rs  desktop_install.rs  emulation.rs
mousehop-cli/: Cargo.toml
mousehop-cli/src/: lib.rs
mousehop-gtk/: Cargo.toml  build.rs
mousehop-gtk/resources/: client_row.ui  resources.gresource.xml  window.ui
mousehop-gtk/src/: client_object.rs  client_row.rs  clipboard_privacy_window.rs  glyph_font.rs  key_object.rs  lib.rs  linux_tray.rs  macos_privacy.rs  macos_status_item.rs  release_shortcut.rs  running_app_object.rs  single_instance.rs  window.rs
mousehop-gtk/src/authorization_window/: imp.rs
mousehop-gtk/src/client_object/: imp.rs
mousehop-gtk/src/client_row/: imp.rs
mousehop-gtk/src/clipboard_privacy_window/: imp.rs
mousehop-gtk/src/fingerprint_window/: imp.rs
mousehop-gtk/src/key_object/: imp.rs
mousehop-gtk/src/key_row/: imp.rs
mousehop-gtk/src/window/: imp.rs
mousehop-ipc/: Cargo.toml
mousehop-ipc/src/: connect.rs  connect_async.rs  lib.rs  listen.rs
mousehop-proto/: Cargo.toml
mousehop-proto/src/: lib.rs
mousehop/src/: client.rs  config.rs  connect.rs  desktop_install.rs  discovery.rs  dns.rs  emulation.rs  firewall.rs  latency.rs  lib.rs  listen.rs  macos_power.rs  macos_tcc_watch.rs  main.rs  network.rs  panic_log.rs  service.rs
nix/: README.md  default.nix  hm-module.nix
packaging/aur/: PKGBUILD
packaging/aur-bin/: PKGBUILD
packaging/aur-git/: PKGBUILD
scripts/: copy-macos-dylib.sh  makeicns.sh  release.sh  sign-and-notarize.sh
service/: mousehop.service
src/: discovery.rs  dns.rs  lib.rs  listen.rs  main.rs  service.rs
