[workspace]
resolver = "2"
members = [
    "input-capture",
    "input-emulation",
    "input-event",
    "mousehop-app",
    "mousehop-ipc",
    "mousehop-cli",
    "mousehop-gtk",
    "mousehop-proto",
]

[workspace.package]
version = "0.11.3"

[workspace.dependencies]
input-event = { package = "mousehop-input-event", path = "input-event", version = "0.11.3" }
input-capture = { package = "mousehop-input-capture", path = "input-capture", version = "0.11.3" }
input-emulation = { package = "mousehop-input-emulation", path = "input-emulation", version = "0.11.3" }
mousehop-proto = { path = "mousehop-proto", version = "0.11.3" }
mousehop-ipc = { path = "mousehop-ipc", version = "0.11.3" }
mousehop-cli = { path = "mousehop-cli", version = "0.11.3" }
mousehop-gtk = { path = "mousehop-gtk", version = "0.11.3" }

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
