[package]
name = "mousehop-cli"
description = "CLI Frontend for mousehop"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jondkinney/mousehop"

[dependencies]
futures = "0.3.30"
mousehop-ipc = { path = "../mousehop-ipc", version = "0.2.0" }
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "2.0.0"
tokio = { version = "1.32.0", features = [
    "io-util",
    "io-std",
    "macros",
    "net",
    "rt",
] }
