[package]
name = "mousehop-proto"
description = "network protocol for mousehop"
version.workspace = true
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jondkinney/mousehop"

[dependencies]
num_enum = "0.7.2"
thiserror = "2.0.0"
input-event = { workspace = true }
paste = "1.0"
